--- a/WCSTrainer/Pages/Shared/_Groups.cshtml
+++ b/WCSTrainer/Pages/Shared/_Groups.cshtml
@@ -11,7 +11,7 @@
 
 <div class="people-container">
    <div class="search">
-      <input type="search" id="searchInputGroups" placeholder="Search By Name" oninput="searchGroups()" />
+      <input class="search-box" type="search" id="searchInputGroups" placeholder="Search By Name" oninput="searchGroups()" />
    </div>
    @{
       var jsonOptions = new JsonSerializerOptions {
