--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -12,7 +12,7 @@
 
 <div class="people-container">
    <div class="search">
-      <input type="search" id="searchInputPeople" placeholder="Search By Name" oninput="searchEmployees()" />
+      <input class="search-box" type="search" id="searchInputPeople" placeholder="Search By Name" oninput="searchEmployees()" />
    </div>
    @{
       var jsonOptions = new JsonSerializerOptions {
