--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -32,6 +32,7 @@
                   </div>
                   <div class="form-group">
                      <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                     <a class="btn bg-btn btnGreen" asp-page="./Assign" asp-route-id="@Model.Skill.Id">Assign</a>
                   </div>
                </form>
             </div>
