--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -107,7 +107,7 @@
             <div class="tools">
                <p class="title">Options:</p>
                <div class="search">
-                  <input id="searchInput" placeholder="Search Training Orders" type="search" oninput="searchTrainingOrders()" />
+                  <input class="search-box" id="searchInput" placeholder="Search Training Orders" type="search" oninput="searchTrainingOrders()" />
                </div>
                <div class="selections">
                   <p class="section-title">Show in List:</p>
