--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -9,16 +9,18 @@
 	--textMain: white;
 	--textSub1: #a0a9b4;
 	--textSub2: #787f87;
-	--mainTheme: #413098;
+	--mainTheme: #7859fb;
 	--white2: #3b4042;
 	--red1: #ff4d4d;
 	--red2: #d81d1d;
-	--blue1: #0db4fc;
+	--blue1: #30b9ff;
 	--blue2: #007ac1;
-	--green1: #81ff8f;
+	--green1: #56ff64;
 	--green2: #0a8e19;
-	--yellow1: #ffe464;
+	--yellow1: #ffec0a;
 	--yellow2: #89640c;
+	--purple1: #818fff;
+	--purple2: #3d2d81;
 	--svg: invert(75%);
 	--svgHover: invert(100%);
 }
@@ -119,15 +121,15 @@
 }
 
 .awaiting {
-	color: var(--red1);
-}
-
-.completed {
 	color: var(--yellow1);
 }
 
-.verified {
+.completed {
 	color: var(--blue1);
+}
+
+.verified {
+	color: var(--red1);
 }
 
 .archived {
@@ -158,6 +160,12 @@
 		color: var(--textSub1);
 	}
 
+	.pill.none {
+		background: none;
+		background-color: var(--gray1);
+		min-height: 20px;
+	}
+
 .text-danger {
 	color: var(--red1);
 }
@@ -177,4 +185,5 @@
 	.pill.green {
 		background-color: var(--green2);
 		color: var(--w);
-	}*/
+	}
+*/
