--- a/WCSTrainer/Pages/Accounts/Index.cshtml
+++ b/WCSTrainer/Pages/Accounts/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@page
 @model WCSTrainer.Pages.AccountManager.IndexModel
-
-@{
-
-}
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
 
 <div class="panel">
    <div class="body">
@@ -15,14 +14,22 @@
                <table id="dataTable">
                   <tr>
                      <th>Username</th>
+                     <th>Role</th>
                      <th></th>
                   </tr>
                   @foreach (var item in Model.Users) {
                      <tr class="clickable">
                         <td>@item.UserName</td>
                         <td>
-                           <a asp-page="./Details" 
-                           asp-route-id="@item.Id" class="btn nbg-btn btnWhite">
+                           @{
+                              var roles = await UserManager.GetRolesAsync(item);
+                              foreach (var role in roles) {
+                                 @role
+                              }
+                           }
+                        </td>
+                        <td>
+                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">
                               View
                            </a>
                         </td>
