--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -18,7 +18,7 @@
 	--green1: #56ff64;
 	--green2: #0a8e19;
 	--yellow1: #ffec0a;
-	--yellow2: #89640c;
+	--yellow2: #f6af06;
 	--purple1: #818fff;
 	--purple2: #3d2d81;
 	--svg: invert(75%);
