--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -63,9 +63,9 @@
             </div>
             <br />
             <div class="btn-container">
-               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Skill.Id">
-                  Edit Skill
-               </a>
+               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Skill.Id">Edit Skill</a>
+               <a class="btn bg-btn btnBlue" asp-page="./Assign" asp-route-id="@Model.Skill.Id">Assign</a>
+
             </div>
          </div>
       </div>
