--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
-@using Microsoft.AspNetCore.Identity
 @model WCSTrainer.Pages.TrainingOrders.IndexModel
-
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<UserAccount> SignInManager
 @inject UserManager<UserAccount> UserManager
 
@@ -32,8 +31,8 @@
                <form method="post" id="maxCountForm">
                   <select asp-for="maxCount" class="drop-main" onchange="updateMaxCount(this.value)">
                      <option value="10">10</option>
+                     <option value="25">25</option>
                      <option value="50">50</option>
-                     <option value="@Model.TrainingOrder.Count()">Max</option>
                   </select>
                </form>
             </div>
