--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -109,7 +109,7 @@
                   <input class="search-box" id="searchInput" placeholder="Search Training Orders" type="search" oninput="searchTrainingOrders()" />
                </div>
                <div class="selections">
-                  <p class="section-title">Show in List:</p>
+                  <p class="section-title">Show List Items:</p>
                   <div class="section">
                      <p class="section-info archived">Archived</p>
                      <input type="checkbox" id="Archived" onchange="checkedBox(this)" />
