--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -8,7 +8,18 @@
    <div class="body">
       <partial name="_Sidebar" />
       <div class="properties">
-         <partial name="_ListDisplay" model="Model.ListPartial" />
+         <div class="list-container">
+            <div class="top">
+               <form method="post" id="pageSizeForm">
+                  <select asp-for="MaxCount" class="drop-main" value="@Model.MaxCount" onchange="this.form.submit()">
+                     <option value="10">10</option>
+                     <option value="25">25</option>
+                     <option value="50">50</option>
+                  </select>
+               </form>
+            </div>
+            <partial name="_ListDisplay" model="Model.ListPartial" />
+         </div>
          <div class="tool-container">
             <div class="tools">
                <p class="title">Options:</p>
@@ -24,41 +35,4 @@
       </div>
    </div>
 </div>
-
-<script>
-   const closeModalBtn = document.querySelector(".btn-close");
-   const deleteText = document.getElementById("deleteText");
-   const deleteBtn = document.querySelector("#deleteBtn");
-
-   function toggleDisplay(className, show) {
-      var elements = document.getElementsByClassName(className);
-      for (var i = 0; i < elements.length; i++) {
-         elements[i].style.display = show ? "flex" : "none";
-      }
-   }
-
-   function checkedBox(checkboxElem) {
-      toggleDisplay(checkboxElem.id, checkboxElem.checked);
-   }
-
-   function update(searchElement) {
-      var value = searchElement.value.toLowerCase();
-      var elements = document.getElementsByClassName("searchable");
-
-      if (value == "") {
-         for (var i = 0; i < elements.length; i++) {
-            elements[i].style.display = "flex";
-         }
-      } else {
-         for (var i = 0; i < elements.length; i++) {
-            var id = elements[i].id.toLowerCase();
-            if (id.indexOf(value) === -1) {
-               elements[i].style.display = "none";
-            } else {
-               elements[i].style.display = "flex";
-            }
-         }
-      }
-   }
-</script>
-
+<script src="~/js/listdisplay.js"></script>
