--- a/WCSTrainer/Pages/Lessons/Index.cshtml
+++ b/WCSTrainer/Pages/Lessons/Index.cshtml
@@ -5,30 +5,27 @@
    <div class="body">
       <partial name="_Sidebar" />
       <div class="properties">
-         <div class="flex-column">
-            <p class="title">Lesson Editor</p>
-            <div class="order-list2">
-               <table id="dataTable">
-                  <tr>
-                     <th>Lesson ID</th>
-                     <th>Lesson Name</th>
-                     <th></th>
-                  </tr>
-                  @foreach (var item in Model.Lesson) {
-                     <tr class="clickable">
-                        <td>@item.Id</td>
-                        <td>@item.Name</td>
-                        <td>
-                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
-                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnRed">Delete</a>
-                        </td>
-                     </tr>
-                  }
-               </table>
-               <div class="sorters">
-                  <div class="btns">
-                     <a asp-page="Create" class="btn bg-btn btnWhite">Create Lesson</a>
-                  </div>
+         <div class="list-container">
+            <div class="top">
+               <form method="post" id="pageSizeForm">
+                  <select asp-for="MaxCount" class="drop-main" value="@Model.MaxCount" onchange="this.form.submit()">
+                     <option value="10">10</option>
+                     <option value="25">25</option>
+                     <option value="50">50</option>
+                  </select>
+               </form>
+            </div>
+            <partial name="_ListDisplay" model="Model.ListPartial" />
+         </div>
+         <script src="~/js/listdisplay.js"></script>
+         <div class="tool-container">
+            <div class="tools">
+               <p class="title">Options:</p>
+               <div class="search">
+                  <input class="search-box" id="searchInput" placeholder="Search Skills" type="search" oninput="update(this)" />
+               </div>
+               <div class="btns">
+                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create Lesson</a>
                </div>
             </div>
          </div>
