--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -33,19 +33,23 @@
                      <p class="title">Phone Number</p>
                      <p class="info">@Model.UserAccount.PhoneNumber</p>
                   </div>
-
                   @if (Model.Employee != null) {
                      <component type="typeof(Person)" render-mode="WebAssemblyPrerendered" param-EmployeeId="@Model.Employee.Id" />
                      <div class="btn-container">
                         <a class="btn bg-btn btnGreen" asp-page="/Employees/Edit" asp-route-id="@Model.UserAccount.EmployeeId">
                            Edit Info
                         </a>
+
+                        <div id="printButton" class="btn bg-btn btnWhite">
+                           <img class="hover-img" src="/images/print.svg">
+                        </div>
                      </div>
                   }
                </div>
-               
             }
          </div>
       </div>
    </div>
 </div>
+
+<script src="~/js/details.js" />
