--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -83,15 +83,4 @@
    </div>
 </div>
 
-<script>
-   document.addEventListener('DOMContentLoaded', function () {
-      var printButton = document.getElementById('printButton');
-      if (printButton) {
-         printButton.addEventListener('click', function () {
-            window.print();
-         });
-      } else {
-         console.error('Print button not found');
-      }
-   });
-</script>
+<script src="~/js/details.js"/>
